# gds_tank

./: .gitignore  CMakeLists.txt  LICENSE
src/: CMakeLists.txt  main.c
src/core/: CMakeLists.txt
src/core/comms/: CMakeLists.txt  comms.c
src/core/drive_system/: CMakeLists.txt  drive_system.c
src/core/include/gds_tank/comms/: comms.h
src/core/include/gds_tank/drive_system/: drive_system.h
src/core/include/gds_tank/pilot/: pilot.h
src/core/pilot/: CMakeLists.txt  pilot.c
src/hardware/: CMakeLists.txt
src/hardware/boards/: CMakeLists.txt
src/hardware/boards/alpha/: CMakeLists.txt  alpha.c
src/hardware/boards/alpha/drivers/: CMakeLists.txt
src/hardware/boards/alpha/drivers/motor_driver/: CMakeLists.txt  motor_driver.c
src/hardware/boards/alpha/drivers/network_driver/: CMakeLists.txt  network_driver.c
src/hardware/include/: lwipopts.h
src/hardware/include/gds_tank/boards/: board.h
src/hardware/include/gds_tank/drivers/: motor_driver.h  network_driver.h
